[project]
name = "beanquery-interactive-manual"
version = "0.1.2.dev0"
description = "An interactive manual and tutorial for beanquery — a customizable, extensible, lightweight SQL-like query tool for Beancount ledger data"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beancount",
    "beanquery>=0.2.0",
    "marimo>=0.22.4",
    "pyzmq>=27.1.0",
]
